# qa-contact-list

./: .gitignore  README.md  contact-list.postman_collection.json  pyproject.toml  requirements.txt
reports/: bug_report.ods  exploratory_test_charter.odt  report.html  test_cases.ods
src/util/admin/: admin_api.py  bearer_auth.py
tests/: conftest.py
tests/api/: conftest.py  test_cases_user.py
tests/api/contact/: conftest.py  test_api_contact.py  test_cases_contact.py
tests/api/user/: conftest.py  test_api_user.py
tests/ui/: conftest.py  pages.py  test_contact.py  test_log_in.py  test_sign_up.py
tests/util/: test_case_parse.py
